feat: adds translation and rtl support

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,3 +1,83 @@
 {
-	"edit": "Edit"
+	"cancel": "إلغاء",
+	"search": {
+		"find": "البحث",
+		"hint": {
+			"empty": "إبدأ بإدخال بعض الكلمات المفتاحية",
+			"no_match": "لا يوجد نتائج مطابقة",
+			"found": "تم العثور على نتيجة"
+		},
+		"path": {
+			"enable": "تفعيل البحث عن المسار",
+			"disable": "تعطيل البحث عن المسار",
+			"start": "نقطة البدء",
+			"end": "نقطة النهاية"
+		}
+	},
+	"node_info": {
+		"title": "معلومات العنصر",
+		"minimize": "تصغير معلومات العنصر",
+		"expand": "توسيع معلومات العنصر"
+	},
+	"zoom": {
+		"reset": "إعادة تعيين التكبير",
+		"in": "تكبير",
+		"out": "تصغير"
+	},
+	"export": {
+		"title": "تصدير",
+		"description": "ستقوم بتصدير ({{nodes}}) عناصر و ({{edges}}) علاقات إلى ملف خارجي.",
+		"action": "تصدير",
+		"success": "تم التصدير بنجاح.",
+		"failed": "فشل التصدير."
+	},
+	"import": {
+		"title": "استيراد",
+		"action": "استيراد",
+		"choose_file": "اختر ملف",
+		"success": "تم الاستيراد بنجاح.",
+		"failed": "فشل الاستيراد."
+	},
+	"refresh": "تحديث",
+	"settings": {
+		"title": "الإعدادات",
+		"action": "إغلاق",
+		"dark_mode": "الوضع المظلم",
+		"clear_unused": {
+			"title": "إزالة العناصر الغير مستخدمة",
+			"action": "إزالة"
+		},
+		"dangerzone": {
+			"title": "منطقة الخطر",
+			"action": "إعادة تعيين قاعدة البيانات",
+			"confirmation": {
+				"label": "التأكيد",
+				"message": "للإستمرار الرجاء كتابة 'تأكيد'"
+			}
+		},
+		"disconnect": "قطع الاتصال"
+	},
+	"add_node": {
+		"title": "إضافة عنصر",
+		"action": "إضافة",
+		"caption": "نوع العنصر",
+		"hint": {
+			"default": "حرك مؤشر الفأرة فوق أي عنصر لعرض معلومات عنه",
+			"person": "شخص ذو علاقات و معلومات"
+		},
+		"type": {
+			"person": "شخص"
+		}
+	},
+	"passport": "جواز السفر",
+	"passports": "جوازات السفر",
+	"picture": "صورة",
+	"pictures": "صور",
+	"video": "فيديو",
+	"videos": "فيديوهات",
+	"document": "مستند",
+	"documents": "مستندات",
+	"files": {
+		"save_dialog_title": "قم بإختيار ملف لحفظ العناصر فيه"
+	}
 }
