feat(public): adds translation

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -47,7 +47,7 @@
 		"success": "تم الاستيراد بنجاح.",
 		"failed": "فشل الاستيراد."
 	},
-	"refresh": "تحديث",
+	"refresh": "تحديث التخطيط",
 	"settings": {
 		"title": "الإعدادات",
 		"action": "إغلاق",
@@ -72,10 +72,17 @@
 		"caption": "نوع العنصر",
 		"hint": {
 			"default": "حرك مؤشر الفأرة فوق أي عنصر لعرض معلومات عنه",
+			"category": "تصنيف يحتوي على عناصر أخرى",
 			"person": "شخص ذو علاقات و معلومات"
 		},
 		"type": {
+			"category": "تصنيف",
 			"person": "شخص"
+		},
+		"inputs": {
+			"category": {
+				"name": "اسم التصنيف"
+			}
 		}
 	},
 	"passport": "جواز السفر",
@@ -88,5 +95,19 @@
 	"documents": "مستندات",
 	"files": {
 		"save_dialog_title": "قم بإختيار ملف لحفظ العناصر فيه"
+	},
+	"context_menu": {
+		"set_start_node": "تعيين نقطة البدء",
+		"set_end_node": "تعيين نقطة النهاية"
+	},
+	"change_layout": {
+		"CIRCULAR": "تغيير التخطيط إلى تخطيط عشوائي",
+		"RANDOM": "تغيير التخطيط إلى تخطيط دائري"
+	},
+	"quick_find": {
+		"title": "البحث سريع",
+		"action": "بحث",
+		"search_label": "بحث",
+		"no_results": "لم يتم العثور على أي نتائج"
 	}
 }
