feat(components): adds help component

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,5 +1,6 @@
 {
 	"cancel": "إلغاء",
+	"close": "إغلاق",
 	"login": "تسجيل الدخول",
 	"username": "اسم المستخدم",
 	"password": "كلمة المرور",
@@ -109,5 +110,23 @@
 		"action": "بحث",
 		"search_label": "بحث",
 		"no_results": "لم يتم العثور على أي نتائج"
+	},
+	"help": {
+		"title": "المساعدة",
+		"description": "هذه الصفحة تعرض جميع الإختصارات المتاحة في هذا التطبيق.",
+		"shortcuts": {
+			"show_help": "عرض المساعدة",
+			"show_settings": "عرض الإعدادات",
+			"show_export": "عرض التصدير",
+			"show_import": "عرض الاستيراد",
+			"refresh_graph": "تحديث التخطيط",
+			"change_layout": "تغيير التخطيط",
+			"show_quick_find": "عرض البحث سريع",
+			"show_add_node": "عرض إضافة عنصر",
+			"escape": "إغلاق المساعدة أو الإعدادات أو التصدير أو الاستيراد... إلخ",
+			"zoom_in": "تكبير",
+			"zoom_out": "تصغير",
+			"reset_zoom": "إعادة تعيين التكبير"
+		}
 	}
 }
