feat(components): adds focus search & toggle find path shortcuts

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -126,7 +126,9 @@
 			"escape": "إغلاق المساعدة أو الإعدادات أو التصدير أو الاستيراد... إلخ",
 			"zoom_in": "تكبير",
 			"zoom_out": "تصغير",
-			"reset_zoom": "إعادة تعيين التكبير"
+			"reset_zoom": "إعادة تعيين التكبير",
+			"focus_search": "الإنتقال للبحث",
+			"toggle_find_path": "تفعيل/تعطيل البحث عن مسار"
 		}
 	}
 }
