refactor(public): corrects typing of translations

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -115,14 +115,14 @@
 		"title": "المساعدة",
 		"description": "هذه الصفحة تعرض جميع الإختصارات المتاحة في هذا التطبيق.",
 		"shortcuts": {
-			"show_help": "عرض المساعدة",
-			"show_settings": "عرض الإعدادات",
-			"show_export": "عرض التصدير",
-			"show_import": "عرض الاستيراد",
+			"show_help": "المساعدة",
+			"show_settings": "الإعدادات",
+			"show_export": "تصدير",
+			"show_import": "استيراد",
 			"refresh_graph": "تحديث التخطيط",
 			"change_layout": "تغيير التخطيط",
-			"show_quick_find": "عرض البحث سريع",
-			"show_add_node": "عرض إضافة عنصر",
+			"show_quick_find": "البحث سريع",
+			"show_add_node": "إضافة عنصر",
 			"escape": "إغلاق المساعدة أو الإعدادات أو التصدير أو الاستيراد... إلخ",
 			"zoom_in": "تكبير",
 			"zoom_out": "تصغير",
