--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -115,14 +115,14 @@
 		"title": "Help",
 		"description": "This page shows shortcuts available in the application.",
 		"shortcuts": {
-			"show_help": "Show help",
-			"show_settings": "Show settings",
-			"show_export": "Show export",
-			"show_import": "Show import",
+			"show_help": "Help",
+			"show_settings": "Settings",
+			"show_export": "Export",
+			"show_import": "Import",
 			"refresh_graph": "Refresh graph",
 			"change_layout": "Change layout",
-			"show_quick_find": "Show quick find",
-			"show_add_node": "Show add node",
+			"show_quick_find": "Quick find",
+			"show_add_node": "Add a node",
 			"escape": "Close help, settings, export, import, ...etc",
 			"zoom_in": "Zoom in",
 			"zoom_out": "Zoom out",
