refactor(models): renames record to transcript

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -77,12 +77,14 @@
 			"default": "حرك مؤشر الفأرة فوق أي عنصر لعرض معلومات عنه",
 			"category": "تصنيف يحتوي على عناصر أخرى",
 			"person": "شخص ذو علاقات و معلومات",
-			"nationality": "جنسية إنتماء الأشخاص"
+			"nationality": "جنسية إنتماء الأشخاص",
+			"transcript": "صحيفة تدوين أحداث اجتماع أو جلسة استماع وكتابة أقوال المجتمعين"
 		},
 		"type": {
 			"category": "تصنيف",
 			"person": "شخص",
-			"nationality": "جنسية"
+			"nationality": "جنسية",
+			"transcript": "محضر"
 		},
 		"inputs": {
 			"choose_file": "اختر ملف",
@@ -127,6 +129,12 @@
 			},
 			"nationality": {
 				"name": "الجنسية"
+			},
+			"transcript": {
+				"title": "عنوان المحضر",
+				"content": "المحتوى",
+				"date": "التاريخ",
+				"attachments": "المرفقات"
 			}
 		},
 		"sections": {
@@ -139,7 +147,8 @@
 		"success": {
 			"person": "تم إضافة الشخص بنجاح.",
 			"category": "تم إضافة التصنيف بنجاح.",
-			"nationality": "تم إضافة الجنسية بنجاح"
+			"nationality": "تم إضافة الجنسية بنجاح",
+			"transcript": "تم إضافة المحضر بنجاح"
 		}
 	},
 	"passport": "جواز السفر",
